fixed alignment for retype password

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -496,6 +496,20 @@ body {
 }
 
 
+#retype-password-container {
+    margin-top: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: opacity 0.3s ease;
+}
+
+#retype-password-container.hidden {
+    display: none;
+    opacity: 0;
+}
+
+
 
 /*  ------------------ Responsive Design   ------------------ */
 /* Mobile View */
